add profiling on inference

--- a/src/FastFit/train_classifier.ipynb
+++ b/src/FastFit/train_classifier.ipynb
@@ -17,7 +17,7 @@
    "outputs": [],
    "source": [
     "classifier_type = 'relevance'\n",
-    "model_name = \"avsolatorio/GIST-small-Embedding-v0\""
+    "model_name = \"avsolatorio/GIST-Embedding-v0\""
    ]
   },
   {
@@ -176,7 +176,50 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d7847bf0945740fabb3bacfe61a64494",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/10241 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b8b83c178ea54cc0b0ea70d8faea4789",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/6271 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c5c9810f26a6412ba1d5820fc07248e8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/4389 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from chunking import chunk_dataset_and_explode\n",
     "\n",
@@ -231,11 +274,11 @@
     "elif classifier_type == 'multiclasses':\n",
     "    num_samples_per_label = 50\n",
     "\n",
-    "train_dataset = sample_dataset(train_dataset, label_column=classifier_type,num_samples_per_label=num_samples_per_label,seed=42)\n",
-    "val_dataset = val_dataset.select(range(500)).shuffle(seed=42)\n",
-    "test_dataset = test_dataset.select(range(500)).shuffle(seed=42)\n",
+    "# train_dataset = sample_dataset(train_dataset, label_column=classifier_type,num_samples_per_label=num_samples_per_label,seed=42)\n",
+    "val_dataset = val_dataset.select(range(1000)).shuffle(seed=42)\n",
+    "# test_dataset = test_dataset.select(range(500)).shuffle(seed=42)\n",
     "\n",
-    "# train_dataset, val_dataset, test_dataset = train_dataset.shuffle(seed=42), val_dataset.shuffle(seed=42), test_dataset.shuffle(seed=42)"
+    "train_dataset, test_dataset = train_dataset.shuffle(seed=42), test_dataset.shuffle(seed=42)"
    ]
   },
   {
@@ -313,88 +356,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "07/25/2024 15:13:09 - WARNING - fastfit.train - Process rank: 0, device: cuda:0, n_gpu: 1distributed training: True, 16-bits training: True\n"
+      "07/26/2024 09:12:32 - WARNING - fastfit.train - Process rank: 0, device: cuda:0, n_gpu: 1distributed training: True, 16-bits training: True\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5e4923f7553b49d38eeb478c715e369d",
+       "model_id": "f88bf89126464c9e9ce5b29721ddff77",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Running tokenizer on dataset to infer max length for both query and document:   0%|          | 0/500 [00:00<?,…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b3671c8abd074e5392f97c95718b3cfd",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Running tokenizer on dataset to infer max length for both query and document:   0%|          | 0/500 [00:00<?,…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "32c2a5978dee43c8a58b7bf13859fba9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Running tokenizer on dataset to infer max length for both query and document:   0%|          | 0/500 [00:00<?,…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "75e9e0f025274a3293c2f4e3982847de",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Running tokenizer on dataset:   0%|          | 0/500 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8f227618f54c4526921b36cf5b300761",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Running tokenizer on dataset:   0%|          | 0/500 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "26ac2a18184348bf9b8b51fbea89ca6b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Running tokenizer on dataset:   0%|          | 0/500 [00:00<?, ? examples/s]"
+       "Running tokenizer on dataset to infer max length for both query and document:   0%|          | 0/1660297 [00:0…"
       ]
      },
      "metadata": {},
@@ -414,7 +387,7 @@
     "    overwrite_output_dir=True,\n",
     "    label_column_name=classifier_type,\n",
     "    text_column_name=\"text\",\n",
-    "    num_train_epochs=5,\n",
+    "    num_train_epochs=10,\n",
     "    per_device_train_batch_size=64,\n",
     "    per_device_eval_batch_size=64,\n",
     "    max_text_length=512,\n",
@@ -430,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -453,13 +426,13 @@
     "\n",
     "print(torch.version.cuda)\n",
     "\n",
-    "torch.cuda.empty_cache()\n",
+    "# torch.cuda.empty_cache()\n",
     "print(trainer.model.device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -646,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -669,80 +642,6 @@
    ],
    "source": [
     "results = trainer.test()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "FastFit(\n",
-       "  (encoder): BertModel(\n",
-       "    (embeddings): BertEmbeddings(\n",
-       "      (word_embeddings): Embedding(30522, 384, padding_idx=0)\n",
-       "      (position_embeddings): Embedding(512, 384)\n",
-       "      (token_type_embeddings): Embedding(2, 384)\n",
-       "      (LayerNorm): LayerNorm((384,), eps=1e-12, elementwise_affine=True)\n",
-       "      (dropout): Dropout(p=0.1, inplace=False)\n",
-       "    )\n",
-       "    (encoder): BertEncoder(\n",
-       "      (layer): ModuleList(\n",
-       "        (0-11): 12 x BertLayer(\n",
-       "          (attention): BertAttention(\n",
-       "            (self): BertSdpaSelfAttention(\n",
-       "              (query): Linear(in_features=384, out_features=384, bias=True)\n",
-       "              (key): Linear(in_features=384, out_features=384, bias=True)\n",
-       "              (value): Linear(in_features=384, out_features=384, bias=True)\n",
-       "              (dropout): Dropout(p=0.1, inplace=False)\n",
-       "            )\n",
-       "            (output): BertSelfOutput(\n",
-       "              (dense): Linear(in_features=384, out_features=384, bias=True)\n",
-       "              (LayerNorm): LayerNorm((384,), eps=1e-12, elementwise_affine=True)\n",
-       "              (dropout): Dropout(p=0.1, inplace=False)\n",
-       "            )\n",
-       "          )\n",
-       "          (intermediate): BertIntermediate(\n",
-       "            (dense): Linear(in_features=384, out_features=1536, bias=True)\n",
-       "            (intermediate_act_fn): GELUActivation()\n",
-       "          )\n",
-       "          (output): BertOutput(\n",
-       "            (dense): Linear(in_features=1536, out_features=384, bias=True)\n",
-       "            (LayerNorm): LayerNorm((384,), eps=1e-12, elementwise_affine=True)\n",
-       "            (dropout): Dropout(p=0.1, inplace=False)\n",
-       "          )\n",
-       "        )\n",
-       "      )\n",
-       "    )\n",
-       "    (pooler): BertPooler(\n",
-       "      (dense): Linear(in_features=384, out_features=384, bias=True)\n",
-       "      (activation): Tanh()\n",
-       "    )\n",
-       "  )\n",
-       "  (projection): Linear(in_features=384, out_features=128, bias=False)\n",
-       "  (clf): Linear(in_features=384, out_features=2, bias=True)\n",
-       "  (dropout): Dropout(p=0.1, inplace=False)\n",
-       "  (batch_norm): BatchNorm1d(384, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "  (clf_criterion): CrossEntropyLoss()\n",
-       "  (sim_criterion): SupConLoss()\n",
-       "  (all_docs): ParameterList(\n",
-       "      (0): Parameter containing: [torch.int64 of size 2x3 (cuda:0)]\n",
-       "      (1): Parameter containing: [torch.int64 of size 2x3 (cuda:0)]\n",
-       "  )\n",
-       ")"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# predict on the test set\n",
-    "model = trainer.export_model()\n",
-    "model.cuda()"
    ]
   }
  ],
