restruc ture to levels, add level 2

--- a/src/Preprocessing/cleaners/irrelevant_data_cleaner.ipynb
+++ b/src/Preprocessing/cleaners/irrelevant_data_cleaner.ipynb
@@ -136,18 +136,20 @@
     }
    ],
    "source": [
-    "files = os.listdir(\"../../../data/irrelevant/\")\n",
+    "path=\"../../../data/unprocessed/irrelevant/\"\n",
+    "files = os.listdir()\n",
     "\n",
     "data = {}\n",
     "errors = []\n",
     "\n",
     "for i,file in enumerate(tqdm(files)):\n",
-    "    with open('../../../data/irrelevant/' + file,'r') as f:\n",
+    "    with open(path + file,'r') as f:\n",
     "        try:\n",
     "            data[i] = json.loads(f.read())\n",
     "        except:\n",
     "            errors.append(file)\n",
     "            continue\n",
+    "\n",
     "\n",
     "data = pd.DataFrame.from_dict(data, orient='index',columns=['URL', 'ExtractedTextUntokenized','RawData'])\n",
     "data.head()"
@@ -176,7 +178,7 @@
    "source": [
     "for file in errors:\n",
     "    try:\n",
-    "        os.remove('data/irrelevant/' + file)\n",
+    "        os.remove('data/unprocessed/irrelevant/' + file)\n",
     "    except FileNotFoundError:\n",
     "        continue\n",
     "print('Removed', len(errors), 'broken files.')"
@@ -515,7 +517,7 @@
    "outputs": [],
    "source": [
     "# write to json\n",
-    "write_data.to_json('../../../data/labelled/irrelevant.json', orient='records', indent=4)\n",
+    "write_data.to_json('../../../data/level-0.5/irrelevant.json', orient='records', indent=4)\n",
     "\n"
    ]
   }
