--- a/src/Preprocessing/cleaners/scraped_cleaning.ipynb
+++ b/src/Preprocessing/cleaners/scraped_cleaning.ipynb
@@ -16,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('../../../data/raw-grey-literature-sources.csv',encoding='latin-1')"
+    "data = pd.read_csv('../../../data/unprocessed/raw-grey-literature-sources.csv',encoding='latin-1')"
    ]
   },
   {
@@ -319,8 +319,8 @@
     "#* Note that some columns are missing data for almost all rows\n",
     "# Specifically, Series Editor, Volume, Pages, Publisher, Date, DOI, Abstract, Research Notes\n",
     "\n",
-    "# Of these, we can immediately drop Volume, Pages, and Research Notes, as they are not relevant to our analysis\n",
-    "data = data.drop(columns=['Volume', 'Pages', 'Research notes'])\n",
+    "# Of these, we can immediately drop Volume, Pages, and Research Notes, as they can't be relevant to our analysis\n",
+    "data = data.drop(columns=['Volume', 'Pages', 'Research notes','Date'])\n",
     "\n",
     "# We'll keep the rest for now but, if we find that they are not useful to the model, we can drop them later"
    ]
@@ -1101,7 +1101,7 @@
     }
    ],
    "source": [
-    "def get_text(url): #TODO: When Kacper finishes web scraping and getting text, replace this with the actual function\n",
+    "def get_text(url):\n",
     "    if url in url_maps:\n",
     "        url = url_maps[url]\n",
     "\n",
@@ -1852,7 +1852,7 @@
     "    data.columns = map(str.lower, data.columns)\n",
     "\n",
     "\n",
-    "    json = data.to_json(path_or_buf=\"../../../data/labelled/scraped/scraped.json\",orient='records')"
+    "    json = data.to_json(path_or_buf=\"../../../data/level-0.5/scraped/scraped.json\",orient='records')"
    ]
   },
   {
