--- a/src/Preprocessing/cleaners/studies_cleaning.ipynb
+++ b/src/Preprocessing/cleaners/studies_cleaning.ipynb
@@ -218,7 +218,7 @@
     }
    ],
    "source": [
-    "data = pd.read_json('../../../data/labelled/studies/raw_studies.json', orient='records')\n",
+    "data = pd.read_json('../../../data/unprocessed/raw_studies.json', orient='records')\n",
     "\n",
     "data.head()\n"
    ]
@@ -226,6 +226,17 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# filter out empty studies\n",
+    "\n",
+    "data = data[data['text'].apply(lambda x: x!='No summary for this intervention.')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,18 +275,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "98386afcbb7e40ed9d0457d5e951b1fb",
+       "model_id": "a00ec7834cea4bf0b3732679d339aab1",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/10105 [00:00<?, ?it/s]"
+       "  0%|          | 0/8488 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -289,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +378,7 @@
        "      <td>NaT</td>\n",
        "      <td>5</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>{Invasive, Fish}</td>\n",
+       "      <td>{Fish, Invasive}</td>\n",
        "      <td>relevant</td>\n",
        "      <td>NaN</td>\n",
        "      <td>https://www.conservationevidence.com/individua...</td>\n",
@@ -461,7 +472,7 @@
        "\n",
        "               publisher date  report number  doi              multiclasses  \\\n",
        "0  Conservation Evidence  NaT              2  NaN  {Pests, Birds, Farmland}   \n",
-       "1  Conservation Evidence  NaT              5  NaN          {Invasive, Fish}   \n",
+       "1  Conservation Evidence  NaT              5  NaN          {Fish, Invasive}   \n",
        "2  Conservation Evidence  NaT              6  NaN               {Shrubland}   \n",
        "3  Conservation Evidence  NaT              7  NaN                        {}   \n",
        "4  Conservation Evidence  NaT              9  NaN                   {Birds}   \n",
@@ -481,7 +492,7 @@
        "4  A replicated, controlled study from 1995-1998 ...  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,11 +503,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.to_json('../../../data/labelled/studies/studies.json', orient='records')"
+    "data.to_json('../../../data/level-0.5/studies/studies.json', orient='records')"
    ]
   }
  ],
