--- a/src/Preprocessing/cleaners/synopses_cleaner.ipynb
+++ b/src/Preprocessing/cleaners/synopses_cleaner.ipynb
@@ -60,7 +60,7 @@
                 "                # pdf_files.append(os.path.join(root, file))\n",
                 "    return pdf_files\n",
                 "\n",
-                "filepaths = get_pdf_files('../../../data/synopses/')\n",
+                "filepaths = get_pdf_files('../../../data/unprocessed/synopses/')\n",
                 "filepaths"
             ]
         },
@@ -155,7 +155,6 @@
                 "        \"place published\": \"None\",\n",
                 "        \"institution\": \"Conservation Evidence Team\",\n",
                 "        \"publisher\": \"Conservation Evidence\",\n",
-                "        \"date\": None,\n",
                 "        \"doi\": None,\n",
                 "        'relevance': 'relevant',\n",
                 "        \"multiclasses\":multiclasses,\n",
@@ -404,7 +403,7 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "data.to_json('../../../data/labelled/synopses/synopses.json', orient='records')"
+                "data.to_json('../../../data/level-0.5/synopses/synopses.json', orient='records')"
             ]
         }
     ],
