--- a/src/Preprocessing/scrapers/studies_scraper.ipynb
+++ b/src/Preprocessing/scrapers/studies_scraper.ipynb
@@ -174,21 +174,7 @@
     "\n",
     "    return results\n",
     "\n",
-    "def retrieve():\n",
-    "    folder = '../../../data/labelled/studies/'\n",
-    "    import json\n",
-    "    import os\n",
-    "    for file in os.listdir(folder):\n",
-    "        if file.endswith(\".json\"):\n",
-    "            with open(os.path.join(folder,file)) as f:\n",
-    "                data = json.load(f)\n",
-    "                data['id'] = file.split(' - ')[0]\n",
-    "                data['classes'] = [data['class']]\n",
-    "                yield data\n",
-    "\n",
-    "\n",
-    "results = scrape()\n",
-    "# results = retrieve()"
+    "results = scrape()"
    ]
   },
   {
@@ -237,8 +223,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "# filter strings\n",
+    "# integrity check\n",
     "results = [r for r in results if type(r['classes']) == list]"
    ]
   },
@@ -260,7 +245,6 @@
     "        \"place published\": 'None',\n",
     "        \"institution\": \"Conservation Evidence Team\",\n",
     "        \"publisher\": 'Conservation Evidence',\n",
-    "        \"date\": None,\n",
     "        \"report number\": result[\"id\"],\n",
     "        \"doi\": None,\n",
     "        \"multiclasses\": result['classes'],\n",
@@ -570,7 +554,7 @@
    "source": [
     "# write to json\n",
     "\n",
-    "df.to_json('../../../data/labelled/studies/raw_studies.json', orient='records')"
+    "df.to_json('../../../data/unprocessed/studies/raw_studies.json', orient='records')"
    ]
   }
  ],
