--- a/src/pytorch_regression.ipynb
+++ b/src/pytorch_regression.ipynb
@@ -134,6 +134,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vectors_tensor = torch.tensor(vectors.todense(), dtype=torch.float32)\n",
+    "vectors_tensor.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [
