--- a/src/Preprocessing/merge_lv0.5.ipynb
+++ b/src/Preprocessing/merge_lv0.5.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -30,17 +30,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_2357542/1324910233.py:8: FutureWarning: The behavior of 'to_datetime' with 'unit' when parsing strings is deprecated. In a future version, strings will be parsed as datetime strings, matching the behavior without a 'unit'. To retain the old behavior, explicitly cast ints or floats to numeric type before calling to_datetime.\n",
+      "/tmp/ipykernel_3108324/1192500695.py:8: FutureWarning: The behavior of 'to_datetime' with 'unit' when parsing strings is deprecated. In a future version, strings will be parsed as datetime strings, matching the behavior without a 'unit'. To retain the old behavior, explicitly cast ints or floats to numeric type before calling to_datetime.\n",
       "  data.append(pd.read_json(os.path.join(path, subdir,f'{subdir}.json'),orient='records'))\n",
-      "/tmp/ipykernel_2357542/1324910233.py:8: FutureWarning: The behavior of 'to_datetime' with 'unit' when parsing strings is deprecated. In a future version, strings will be parsed as datetime strings, matching the behavior without a 'unit'. To retain the old behavior, explicitly cast ints or floats to numeric type before calling to_datetime.\n",
+      "/tmp/ipykernel_3108324/1192500695.py:8: FutureWarning: The behavior of 'to_datetime' with 'unit' when parsing strings is deprecated. In a future version, strings will be parsed as datetime strings, matching the behavior without a 'unit'. To retain the old behavior, explicitly cast ints or floats to numeric type before calling to_datetime.\n",
       "  data.append(pd.read_json(os.path.join(path, subdir,f'{subdir}.json'),orient='records'))\n",
-      "/tmp/ipykernel_2357542/1324910233.py:8: FutureWarning: The behavior of 'to_datetime' with 'unit' when parsing strings is deprecated. In a future version, strings will be parsed as datetime strings, matching the behavior without a 'unit'. To retain the old behavior, explicitly cast ints or floats to numeric type before calling to_datetime.\n",
+      "/tmp/ipykernel_3108324/1192500695.py:8: FutureWarning: The behavior of 'to_datetime' with 'unit' when parsing strings is deprecated. In a future version, strings will be parsed as datetime strings, matching the behavior without a 'unit'. To retain the old behavior, explicitly cast ints or floats to numeric type before calling to_datetime.\n",
       "  data.append(pd.read_json(os.path.join(path, subdir,f'{subdir}.json'),orient='records'))\n"
      ]
     }
    ],
    "source": [
-    "path = '../../data/labelled/'\n",
+    "path = '../../data/level-0.5/'\n",
     "\n",
     "data = []\n",
     "\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -213,12 +213,12 @@
        "</div>"
       ],
       "text/plain": [
-       "  reference type author year                          title  series editor  \\\n",
-       "0       CE Study    NaN  NaN  Subtidal Benthic Invertebrate            NaN   \n",
-       "1       CE Study    NaN  NaN    Invasive Freshwater Species            NaN   \n",
-       "2       CE Study    NaN  NaN                      Grassland            NaN   \n",
-       "3       CE Study    NaN  NaN                        Primate            NaN   \n",
-       "4       CE Study    NaN  NaN             Terrestrial Mammal            NaN   \n",
+       "  reference type author  year                          title  series editor  \\\n",
+       "0       CE Study    NaN   NaN  Subtidal Benthic Invertebrate            NaN   \n",
+       "1       CE Study    NaN   NaN    Invasive Freshwater Species            NaN   \n",
+       "2       CE Study    NaN   NaN                      Grassland            NaN   \n",
+       "3       CE Study    NaN   NaN                        Primate            NaN   \n",
+       "4       CE Study    NaN   NaN             Terrestrial Mammal            NaN   \n",
        "\n",
        "  series/book title place published                 institution  \\\n",
        "0               NaN            None  Conservation Evidence Team   \n",
@@ -263,7 +263,7 @@
        "4    NaN  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
        "4                           [Mammals]  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,16 +383,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "write_data.to_json('../../data/labelled/relevant.json',orient='records')"
+    "write_data.to_json('../../data/level-0.5/relevant.json',orient='records')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -400,16 +400,16 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 20901 entries, 0 to 10687\n",
+      "Index: 19284 entries, 0 to 10687\n",
       "Data columns (total 4 columns):\n",
       " #   Column        Non-Null Count  Dtype \n",
       "---  ------        --------------  ----- \n",
-      " 0   url           20901 non-null  object\n",
-      " 1   text          20901 non-null  object\n",
-      " 2   relevance     20901 non-null  object\n",
-      " 3   multiclasses  20901 non-null  object\n",
+      " 0   url           19284 non-null  object\n",
+      " 1   text          19284 non-null  object\n",
+      " 2   relevance     19284 non-null  object\n",
+      " 3   multiclasses  19284 non-null  object\n",
       "dtypes: object(4)\n",
-      "memory usage: 816.4+ KB\n",
+      "memory usage: 753.3+ KB\n",
       "None\n"
      ]
     },
@@ -503,15 +503,15 @@
        "4                           [Mammals]  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def merge_data():\n",
-    "    relevant = pd.read_json('../../data/labelled/relevant.json',orient='records')\n",
-    "    irrelevant = pd.read_json('../../data/labelled/irrelevant.json',orient='records')\n",
+    "    relevant = pd.read_json('../../data/level-0.5/relevant.json',orient='records')\n",
+    "    irrelevant = pd.read_json('../../data/level-0.5/irrelevant.json',orient='records')\n",
     "    data = pd.concat([relevant,irrelevant])\n",
     "    return data\n",
     "\n",
@@ -522,12 +522,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "merged_data.to_json('../../data/labelled/data.json',orient='records')"
+    "merged_data.to_json('../../data/level-0.5/data.json',orient='records')"
    ]
   }
  ],
